# cpp_log

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: app.hpp  checker.hpp  core.hpp  file_logger.hpp  linux_socket_logger.hpp  pool.hpp  socket_logger.hpp  structs.h
app/src/: CMakeLists.txt  app.cpp  checker.cpp  core.cpp  file_logger.cpp  main.cpp  pool.cpp  socket_logger.cpp
lib/: CMakeLists.txt
lib/include/: core.hpp  file_logger.hpp  linux_socket_logger.hpp  socket_logger.hpp  structs.h
lib/src/: CMakeLists.txt  core.cpp  file_logger.cpp  linux_socket_logger.cpp  socket_logger.cpp
socket_app/include/: app.hpp  checker.hpp  linux_socket_manager.hpp  socket_manager.hpp  statistician.hpp  struct.h
socket_app/src/: CMakeLists.txt  app.cpp  checker.cpp  linux_socket_manager.cpp  main.cpp  socket_manager.cpp  statistician.cpp
src/: CMakeLists.txt
